# ftgrep

./: Cargo.toml  README.md  README_ja.md
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  cli.rs  highlight.rs  indexer.rs  lib.rs  main.rs  meta.rs  registry.rs  schema.rs  searcher.rs
src/cmd/: index_cmd.rs  info_cmd.rs  list_cmd.rs  mod.rs  sync_cmd.rs
tests/: e2e.rs
tests/fixtures/docs/: english_doc.txt  normalization.txt  notes.md  rust_intro.md  search_engine.txt
