[package]
name = "ftgrep"
version = "0.1.0"
edition = "2021"

[lib]
name = "ftgrep"
path = "src/lib.rs"

[[bin]]
name = "ftgrep"
path = "src/main.rs"

[dependencies]
tantivy = "0.25"
tantivy-tokenizer-api = "0.6"
lindera = { version = "2.0.1", features = ["embed-ipadic"] }
lindera-tantivy = { version = "2.0", features = ["embed-ipadic"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
unicode-normalization = "0.1"
gray_matter = "0.2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
